# toggl-tools-rs

./: .cspell.json  .editorconfig  .gitignore  Cargo.toml  README.md  Taskfile.yml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: prettier.yml  rust.yml  spell-check.yml
src/: console.rs  daily_command.rs  daily_commnad.rs  datetime.rs  main.rs  monthly_command.rs  time_entry.rs  toggl.rs
