[package]
description = "A set of tools to interact with the Toggl API"
edition = "2021"
name = "tooggls"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.0", features = ["derive"]}
dirs = "5.0"
fern = {version = "0.6", features = ["colored"]}
log = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}

[dev-dependencies]
mockall = "0.12"
rstest = "0.21.0"
